# eo_pause_hammer

./: CMakeLists.txt  README.md
docs/: theory.md  timeline.md
eo_pause_hammer/src/: main.cpp
eo_pause_hammer/src/hotkeys/: hotkey_handler.cpp  hotkey_handler.h
eo_pause_hammer/src/logger/: logger.cpp  logger.h
eo_pause_hammer/src/process/: process_utils.cpp  process_utils.h  thread_manager.cpp  thread_manager.h
pause_hammer/src/: CMakeLists.txt  main.cpp
pause_hammer/src/hotkeys/: hotkey_handler.cpp  hotkey_handler.h
pause_hammer/src/logger/: logger.cpp  logger.h
pause_hammer/src/process/: process_utils.cpp  process_utils.h  thread_manager.cpp  thread_manager.h
pause_hammer/src/utils/: process_utils.h
